// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sphere renders correctly when halved 1`] = `
.emotion-0.emotion-0 {
  width: 32px;
  height: 32px;
  position: relative;
}

<div
  className="sui-box emotion-0"
  css={
    Object {
      "map": undefined,
      "name": "hakm06",
      "next": undefined,
      "styles": "
      align-items: center;
      border-left: 16px solid #333;
      border-top: 16px solid #333;
      border-right: 16px solid #666;
      border-bottom: 16px solid #666;
      border-radius: 50%;
      display: flex;
      height: 100%;
      justify-content: center;
      width: 100%;
    ",
      "toString": [Function],
    }
  }
/>
`;

exports[`Sphere renders correctly with default values 1`] = `
.emotion-0.emotion-0 {
  width: 32px;
  height: 32px;
  position: relative;
}

<div
  className="sui-box emotion-0"
  css={
    Object {
      "map": undefined,
      "name": "e8q7zp",
      "next": undefined,
      "styles": "
      align-items: center;
      border-left: 16px solid #4f0599;
      border-top: 16px solid #4f0599;
      border-right: 16px solid #4f0599;
      border-bottom: 16px solid #4f0599;
      border-radius: 50%;
      display: flex;
      height: 100%;
      justify-content: center;
      width: 100%;
    ",
      "toString": [Function],
    }
  }
/>
`;

exports[`Sphere renders correctly with one char and smaller 1`] = `
.emotion-0.emotion-0 {
  width: 20px;
  height: 20px;
  position: relative;
}

<div
  className="sui-box emotion-0"
  css={
    Object {
      "map": undefined,
      "name": "16c4awo",
      "next": undefined,
      "styles": "
      align-items: center;
      border-left: 10px solid #000;
      border-top: 10px solid #000;
      border-right: 10px solid #000;
      border-bottom: 10px solid #000;
      border-radius: 50%;
      display: flex;
      height: 100%;
      justify-content: center;
      width: 100%;
    ",
      "toString": [Function],
    }
  }
>
  <div
    css={
      Object {
        "map": undefined,
        "name": "1834tc3",
        "next": undefined,
        "styles": "
    color: #fff;
    font-size: 10px;
  ",
        "toString": [Function],
      }
    }
  >
    ★
  </div>
</div>
`;
